<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/checkin_image_view"
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/checkin_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/checkin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_title_text"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_place_label"/>

    <EditText
        android:id="@+id/checkin_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_place_text"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_details_label"/>

    <EditText
        android:id="@+id/checkin_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_details_text"/>

    <Button
        android:id="@+id/checkin_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/checkin_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/checkin_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Show Map!"/>

    <Button
        android:id="@+id/checkin_share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Share!"/>

</LinearLayout>